[FIX] theme_accorderie: wrong color from maquette

--- a/website_accorderie/static/src/scss/explorer/demandes_recentes.scss
+++ b/website_accorderie/static/src/scss/explorer/demandes_recentes.scss
@@ -90,13 +90,14 @@
   }
 
   .status.blue {
-    background-color: $alpha;
+    background-color: $bg-green-alert;
     border: none;
     color: $text-alpha;
   }
 
   .status.blue-o {
-    color: $alpha;
+    background-color: $bg-green-alert;
+    color: $text-alpha;
   }
 
   .event {
