--- a/website_accorderie/static/src/scss/website_accorderie.scss
+++ b/website_accorderie/static/src/scss/website_accorderie.scss
@@ -14,7 +14,7 @@ $gamma: #dbe8ea;
 $primary-color: theme-color("primary");
 $secondary-color: theme-color("secondary"); // navy blue
 $tertiary-color: theme-color("delta"); // cloud blue
-$second-navbar-color: #d6d0d5;
+$second-navbar-color: #e8eef8;
 
 // Text Colors
 $text-alpha: white;
@@ -24,7 +24,8 @@ $text-gamma: #656565;
 // Background Colors
 $bg-alpha: white;
 $bg-red-2-alert: #9f0808;
-$bg-red-alert: #fd7878;
+$bg-red-alert: #d8746f;
+$bg-green-alert: #70a6a8;
 
 /*
   Global
